[tool.poetry]
name = "web-endfy"
version = "0.1.0"
description = "Python package to access ENDF files on the web"
authors = ["Georg Schnabel"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_endfy"}]

[tool.poetry.dependencies]
python = ">=3.6.1"
requests = ">=2.19.0"
beautifulsoup4 = ">=4.6.0"
pandas = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
